--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,9 +1,89 @@
-@import './abstracts/varibles';
+@import "./abstracts/varibles";
 
-*{
+* {
   margin: 0;
 }
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   border: 0;
   vertical-align: baseline;
 }
@@ -11,7 +91,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 html {
   height: 100%;
   font-size: 58%;
-  font-family: sans-serif; 
+  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -22,7 +102,12 @@ a {
   cursor: pointer;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 20px 0 15px;
   padding: 0;
   font-weight: bold;
@@ -43,10 +128,10 @@ body {
 
 sub,
 sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 blockquote {
@@ -70,7 +155,8 @@ blockquote {
 }
 
 // aplayer兼容
-.aplayer-title, .aplayer-list-title {
+.aplayer-title,
+.aplayer-list-title {
   color: #000;
 }
 
@@ -82,10 +168,10 @@ blockquote {
   width: 100%;
   height: 0;
   opacity: 0;
-  width: 100%; 
-  left: 0px; 
-  top: 0px; 
-  transition: opacity 300ms ease-in-out 0s; 
+  width: 100%;
+  left: 0px;
+  top: 0px;
+  transition: opacity 300ms ease-in-out 0s;
   z-index: 99999;
 }
 
@@ -105,19 +191,23 @@ blockquote {
   position: relative;
 }
 
+.no-fancybox {
+  cursor: pointer !important;
+}
+
 pre > span.copy-code {
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 12px;
   line-height: 1;
-  color: hsla(0,0%,54.9%,.8);
-  transition: color .1s;
+  color: hsla(0, 0%, 54.9%, 0.8);
+  transition: color 0.1s;
   user-select: none;
 }
 
 pre > span.copy-code:hover {
-  color: #FFF;
+  color: #fff;
 }
 
 .nav-item .fa {
@@ -126,13 +216,13 @@ pre > span.copy-code:hover {
 }
 
 // 兼容
-.MathJax{
-  outline:0;
+.MathJax {
+  outline: 0;
 }
 
 .MathJax_Display {
-  overflow-x:auto;
-  overflow-y:hidden !important;
+  overflow-x: auto;
+  overflow-y: hidden !important;
 }
 
 p > code {
@@ -141,28 +231,35 @@ p > code {
   border-radius: 0;
   background-color: #fff5f5;
   color: #c53030;
-  padding: .2em .33333333em;
-  font-size: .875rem;
-  margin-left: .125em;
-  margin-right: .125em;
+  padding: 0.2em 0.33333333em;
+  font-size: 0.875rem;
+  margin-left: 0.125em;
+  margin-right: 0.125em;
 }
 
 /*雪花*/
-.snow-container { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 100001; }
+.snow-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 100001;
+}
 
-
-@import './_core/common.less';
-@import './_blocks/footer.less';
-@import './_blocks/friends.less';
-@import './_blocks/section.less';
-@import './_blocks/pagination.less';
-@import './_blocks/post-list.less';
-@import './_blocks/title.less';
-@import './_blocks/post.less';
-@import './_blocks/post-sidebar.less';
-@import './_blocks/cloud-tags.less';
-@import './_blocks/tag-timeline.less';
-@import './_blocks/archive-timeline.less';
-@import './_blocks/toc.less';
-@import './_blocks/search.less';
-@import './_core/markdown.less';
+@import "./_core/common.less";
+@import "./_blocks/footer.less";
+@import "./_blocks/friends.less";
+@import "./_blocks/section.less";
+@import "./_blocks/pagination.less";
+@import "./_blocks/post-list.less";
+@import "./_blocks/title.less";
+@import "./_blocks/post.less";
+@import "./_blocks/post-sidebar.less";
+@import "./_blocks/cloud-tags.less";
+@import "./_blocks/tag-timeline.less";
+@import "./_blocks/archive-timeline.less";
+@import "./_blocks/toc.less";
+@import "./_blocks/search.less";
+@import "./_core/markdown.less";
