--- a/templates/_blocks/post-list.ejs
+++ b/templates/_blocks/post-list.ejs
@@ -29,25 +29,33 @@
           <% let content = ''; for (let i = 0; i < paragraph.length; i++) { %>
             <%- '<p>' + paragraph[i] %>
             <% if (i === 1 && post.feature) {%>
-              <img src="<%= imgUrl %>" />
+              <a href="<%= post.link %>" rel="contents">
+                <img src="<%= imgUrl %>" class="no-fancybox" />
+              </a>
             <% } %>
           <% } %>
         <% } else if (site.customConfig.strategy === 'before') {%>
           <% if (post.feature) { %>
-            <img src="<%= imgUrl %>" />
+            <a href="<%= post.link %>" rel="contents">
+              <img src="<%= imgUrl %>" class="no-fancybox" />
+            </a>
           <% } %>
           <%- post.abstract %>
         <% } else if (site.customConfig.strategy === 'after') {%>
           <%- post.abstract %>
           <% if (post.feature) {%>
-            <img src="<%= imgUrl %>" />
+            <a href="<%= post.link %>" rel="contents">
+              <img src="<%= imgUrl %>" class="no-fancybox" />
+            </a>
           <% } %>
         <% } else if (site.customConfig.strategy === 'random') {%>
           <% let paragraph = post.abstract && post.abstract.split('<p>');let r = Math.floor(Math.random() * 10) % paragraph.length;%>
           <% let content = ''; for (let i = 0; i < paragraph.length; i++) { %>
             <%- '<p>' + paragraph[i]%>
             <% if (i === r && post.feature) {%>
-              <img src="<%= imgUrl %>" />
+              <a href="<%= post.link %>" rel="contents">
+                <img src="<%= imgUrl %>" class="no-fancybox" />
+              </a>
             <% } %>
           <% } %>
         <% } else if (site.customConfig.strategy === 'words') {%>
@@ -57,12 +65,16 @@
             <%- post.featurec %>
             <% words +=paragraph[i].length; %>
             <% if (!has && words > 200 && post.feature) {%>
-              <img src="<%= imgUrl %>"/>
+              <a href="<%= post.link %>" rel="contents">
+                <img src="<%= imgUrl %>" class="no-fancybox" />
+              </a>
               <% has = true; %>
             <% } %>
           <% } %>
           <% if (!has && post.feature) {%>
-            <img src="<%= imgUrl %>"/>
+            <a href="<%= post.link %>" rel="contents">
+              <img src="<%= imgUrl %>" class="no-fancybox" />
+            </a>
           <% } %>
         <% } else {%>
           <%- post.abstract %>
