--- a/templates/_blocks/footer.ejs
+++ b/templates/_blocks/footer.ejs
@@ -1,11 +1,11 @@
 <div class="footer-box">
   <footer class="footer">
-    <div class="copyright">
-      Powered by <a href="https://github.com/getgridea/gridea" target="_blank">Gridea</a> | © 2019-2020 Theme By <a
-        href="https://github.com/hsxyhao/gridea-theme-next" target="_blank">HsxyHao</a>
-    </div>
     <div class="poweredby">
       <%- site.themeConfig.footerInfo%>
+    </div>
+    <div class="copyright">
+      Powered by <a href="https://github.com/getgridea/gridea" target="_blank">Gridea</a> | Theme By <a
+        href="https://github.com/hsxyhao/gridea-theme-next" target="_blank">HsxyHao</a>
     </div>
   </footer>
   <% let scheme = site.customConfig.scheme || 'pisces'; %>
