--- a/templates/_blocks/header.ejs
+++ b/templates/_blocks/header.ejs
@@ -4,6 +4,8 @@ map.set('/','home');
 map.set('/archives', 'archive'); 
 map.set('/tags','tags');
 map.set('/post/about','user');
+map.set('https://github.com/anhoder','github');
+map.set('/media/excalidraw','picture-o');
 map.set('/post/skin-update','info-circle'); %>
 <div class="<%= scheme !==''?scheme:'pisces' %>">
   <header class="header <%= scheme === 'mist' || scheme === 'muse'?'bg-color':''%> ">
