--- a/templates/_blocks/pagination.ejs
+++ b/templates/_blocks/pagination.ejs
@@ -1,4 +1,4 @@
-<% const show = 5; let model = logs % pageSize; let result = Math.floor(logs / pageSize); let pages = model === 0? result : result + 1; let next = pagination.next !== ''? parseInt(pagination.next.split('/')[index]): pages + 1;let current = next - 1; %>
+<% const show = 5; let model = logs % pageSize; let result = Math.floor(logs / pageSize); let pages = model === 0? result : result + 1; let nextSplit = pagination.next.split('/'); nextSplit = nextSplit.length>0&&nextSplit[nextSplit.length-1]=='' ? nextSplit.slice(0,nextSplit.length-1) : nextSplit ; let next = nextSplit.length>1 ? parseInt(nextSplit[nextSplit.length-1]): pages + 1;let current = next - 1; %>
 <div class="page bg-color">
   <ul class="pagination-ul">
     <% if (pagination.prev !== '') {%>
