fix. 关闭搜索报错

--- a/templates/_blocks/reward.ejs
+++ b/templates/_blocks/reward.ejs
@@ -212,7 +212,7 @@
       });
     }
 
-    rewardBtn.addEventListener('click', (e) => {
+    rewardBtn && rewardBtn.addEventListener('click', (e) => {
       window.Velocity(mask, 'transition.slideDownIn', {
         duration: 400
       })
