--- a/templates/_blocks/footer.ejs
+++ b/templates/_blocks/footer.ejs
@@ -177,7 +177,7 @@
   }
 
   let faSearch = document.querySelector('#fa_search');
-  faSearch.addEventListener('click', function () {
+  faSearch && faSearch.addEventListener('click', function () {
     document.querySelector('#search_mask').style = ''
   })
 
